<resources>
    <string name="app_name">BottomFragmentExample</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">HomeFragment</string>
    <string name="about_fragment">AboutFragment</string>
    <string name="history_fragment">HistoryFragment</string>
    <string name="settings_fragment">SettingsFragment</string>
    <string name="press_again_to_exit">Press Again to Exit</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="username">Username or Email</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="retype_password">Retype Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="sign_up_successfully">Sign up Successfully</string>
    <string name="bisleri">Bisleri</string>
    <string name="description">Description</string>
    <string name="_name">Name :</string>
    <string name="quantity">Quantity :</string>
    <string name="price">Price :</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total">Total :</string>
</resources>
